--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,9 +40,9 @@ jobs:
             - uses: actions/checkout@v3
 
             - name: Run clang-format style check
-              uses: jidicula/clang-format-action@v4.8.0
+              uses: jidicula/clang-format-action@v5
               with:
-                  clang-format-version: '14'
+                  clang-format-version: '15'
                   check-path: .
 
     compile:
@@ -53,7 +53,7 @@ jobs:
                 mpi: [ON, OFF]
             fail-fast: false
 
-        name: Compile ${{ matrix.compiler.name }}${{ matrix.mpi == 'ON' && ' MPI' || ''}}
+        name: compile ${{ matrix.compiler.name }}${{ matrix.mpi == 'ON' && ' MPI' || ''}}
         steps:
             - uses: actions/checkout@v3
 
@@ -119,7 +119,7 @@ jobs:
             fail-fast: false
 
         runs-on: ${{ matrix.os }}
-        name: ${{ matrix.testname }} MPI${{ matrix.testmode == 'ON' && ' testmode' || ''}}
+        name: ${{ matrix.testname }} MPI${{ matrix.testmode == 'ON' && ' testmode ON' || ''}}
 
         steps:
             - uses: actions/checkout@v3
