run previous commit to compare performance

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -292,3 +292,22 @@ jobs:
               with:
                   name: test-${{ matrix.testname }}-output-pdf
                   path: tests/*.pdf
+
+            - name: Compile previous commit
+              if: matrix.testmode == 'OFF'
+              run: |
+                  git checkout HEAD~1
+                  mpicxx --version
+                  mpicxx --showme:version
+                  make clean
+                  make TESTMODE=${{ matrix.testmode }} MPI=ON -j${{ steps.cpu-count.outputs.count }} sn3d exspec
+                  cp sn3d tests/${{ matrix.testname }}_testrun/
+                  cp exspec tests/${{ matrix.testname }}_testrun/
+
+            - name: Run previous commit job0 start
+              if: matrix.testmode == 'OFF'
+              working-directory: tests/${{ matrix.testname }}_testrun/
+              run: |
+                  cp input-newrun.txt input.txt
+                  touch output_0-0.txt
+                  time mpirun -np 2 ./sn3d
