--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -271,7 +271,7 @@ jobs:
                   python3 -m pip install artistools
 
                   # upgrade all installed packages to their latest versions
-                  python3 -m pip list --format=freeze --outdated | cut -d '=' -f1 | xargs -n1 python3 -m pip install --upgrade
+              #   python3 -m pip list --format=freeze --outdated | cut -d '=' -f1 | xargs -n1 python3 -m pip install --upgrade
 
             - name: Plot output
               if: always() && matrix.testname == 'nebularonezone' && matrix.testmode == 'OFF'
