--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,9 @@ on:
     push:
         branches-ignore:
             - classic*
-  # pull_request:
-  #   branches:
-  #   - nebular*
-  #   - main
+    pull_request:
+        branches-ignore:
+            - classic*
 
 env:
     ASAN_OPTIONS: detect_stack_use_after_return=1:detect_leaks=0
