--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,14 +146,14 @@ jobs:
                   sudo apt-get update
                   echo "count=$(python3 -c 'import multiprocessing; print(multiprocessing.cpu_count())')" >> $GITHUB_OUTPUT
 
-      # we can cache this, but then we don't test the code that generates ratecoeff.dat
-            - name: Cache ratecoeff.dat
-              if: matrix.testname == 'classicmode'
-              uses: actions/cache@v3
-        # if: matrix.testmode != 'ON'
-              with:
-                  path: tests/${{ matrix.testname }}_testrun/ratecoeff.dat
-                  key: tests/${{ matrix.testname }}_testrun/ratecoeff.dat
+            # we can cache this, but then we don't test the code that generates ratecoeff.dat
+            # - name: Cache ratecoeff.dat
+            #   if: matrix.testname == 'classicmode'
+            #   # if: matrix.testname == 'classicmode' && matrix.testmode != 'ON'
+            #   uses: actions/cache@v3
+            #   with:
+            #       path: tests/${{ matrix.testname }}_testrun/ratecoeff.dat
+            #       key: tests/${{ matrix.testname }}_testrun/ratecoeff.dat
 
             - name: Cache test atomic data
               uses: actions/cache@v3
