--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -147,13 +147,19 @@ jobs:
                   echo "count=$(python3 -c 'import multiprocessing; print(multiprocessing.cpu_count())')" >> $GITHUB_OUTPUT
 
             # we can cache this, but then we don't test the code that generates ratecoeff.dat
-            # - name: Cache ratecoeff.dat
-            #   if: matrix.testname == 'classicmode'
-            #   # if: matrix.testname == 'classicmode' && matrix.testmode != 'ON'
-            #   uses: actions/cache@v3
-            #   with:
-            #       path: tests/${{ matrix.testname }}_testrun/ratecoeff.dat
-            #       key: tests/${{ matrix.testname }}_testrun/ratecoeff.dat
+            - name: Cache ratecoeff.dat
+              if: matrix.testname == 'classicmode'
+              # if: matrix.testname == 'classicmode' && matrix.testmode != 'ON'
+              uses: actions/cache@v3
+              with:
+                  path: tests/${{ matrix.testname }}_testrun/ratecoeff.dat
+                  key: tests/${{ matrix.testname }}_testrun/ratecoeff.dat
+
+            - name: check ratecoeff.dat
+              if: matrix.testname == 'classicmode'
+              working-directory: tests/${{ matrix.testname }}_testrun/
+              run: |
+                  mv ratecoeff.dat ratecoeff_cached.dat
 
             - name: Cache test atomic data
               uses: actions/cache@v3
@@ -205,7 +211,7 @@ jobs:
               run: |
                   mkdir job0
                   ../../scripts/movefiles.sh job0
-                  md5sum *.out ratecoeff.dat job0/*.out
+                  md5sum *.out ratecoeff*.dat job0/*.out
 
                   if [ -f results_md5_job0.txt ]; then md5sum -c results_md5_job0.txt; else echo "results_md5_job0.txt not found"; fi
 
@@ -239,7 +245,7 @@ jobs:
               working-directory: tests/${{ matrix.testname }}_testrun/
               run: |
                   mkdir output
-                  cp -r output_0-0.txt exspec.txt *.out output/
+                  cp -r output_0-0.txt exspec.txt ratecoeff*.dat *.out output/
                   rsync -av job0 output/
                   rsync -av job1 output/
                   cat exspec.txt
