--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -57,7 +57,7 @@ jobs:
             - name: Cache build output for incremental compilation
               uses: actions/cache@v3
               with:
-                  path: build*
+                  path: build/**
                   key: build-${{ matrix.compiler.name }}-MPI${{ matrix.mpi}}-${{ matrix.artisoptionsfile }}
 
             - name: CPU count
