--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -112,4 +112,5 @@ jobs:
               run: |
                   cp -v ${{ matrix.artisoptionsfile }} artisoptions.h
                   find build
+                  cat build/x86_64_mpi/grid.d
                   make MPI=${{matrix.mpi}} -j${{ steps.cpu-count.outputs.count}} sn3d exspec
