--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -110,7 +110,5 @@ jobs:
 
             - name: Compile
               run: |
-                  cp -v ${{ matrix.artisoptionsfile }} artisoptions.h
-                  find build
-                  cat build/x86_64_mpi/grid.d
+                  cp -v -p ${{ matrix.artisoptionsfile }} artisoptions.h
                   make MPI=${{matrix.mpi}} -j${{ steps.cpu-count.outputs.count}} sn3d exspec
