--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -57,10 +57,13 @@ jobs:
             - name: CPU type and core count
               id: cpu-count
               run: |
-                  sudo apt-get update
                   g++ -march=native -Q --help=target | grep -- '-march=  ' | cut -f3
                   # echo "count=$(python3 -c 'import psutil; print(int(psutil.cpu_count(logical=False)))')" >> $GITHUB_OUTPUT
                   echo "count=$(python3 -c 'import multiprocessing; print(multiprocessing.cpu_count())')" >> $GITHUB_OUTPUT
+
+            - name: apt-get update
+              run: |
+                  sudo apt-get update
 
             - name: Install gcc-11
               if: matrix.compiler.name == 'gcc-11'
