--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,10 +43,10 @@ jobs:
                   sudo apt install -y openmpi-bin libopenmpi-dev
                   echo "OMPI_CXX=g++-12" >> $GITHUB_ENV
 
-            - name: CPU count
+            - name: CPU type and core count
               id: cpu-count
               run: |
-                  sudo apt-get update
+                  g++ -march=native -Q --help=target | grep -- '-march=  ' | cut -f3
                   echo "count=$(python3 -c 'import multiprocessing; print(multiprocessing.cpu_count())')" >> $GITHUB_OUTPUT
 
             # we can cache this, but then we don't test the code that generates ratecoeff_v2.dat
