--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -45,7 +45,8 @@ jobs:
         runs-on: ubuntu-22.04
         strategy:
             matrix:
-                compiler: [{name: gcc-11, cmd: g++-11}, {name: gcc-12, cmd: g++-12}, {name: clang-14, cmd: clang++-14}, {name: clang-15, cmd: clang++-15}]
+                compiler: [{name: gcc-11, cmd: g++-11}, {name: gcc-12, cmd: g++-12}, {name: clang-14, cmd: clang++-14}, {name: clang-15, cmd: clang++-15},
+                     {name: clang-16, cmd: clang++-16}]
                 mpi: [ON, OFF]
                 artisoptionsfile: [artisoptions_christinenonthermal.h, artisoptions_classic.h, artisoptions_kilonova_lte.h, artisoptions_nltenebular.h]
             fail-fast: false
@@ -84,6 +85,11 @@ jobs:
               if: matrix.compiler.name == 'clang-15'
               run: |
                   sudo apt-get install -y clang-15 --install-suggests
+
+            - name: Install clang 16
+              if: matrix.compiler.name == 'clang-16'
+              run: |
+                  sudo apt-get install -y clang-16 --install-suggests
 
             - name: install openmpi
               if: matrix.mpi == 'ON'
