--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,25 +27,16 @@ repos:
       rev: v1.3.5
       hooks:
           - id: clang-format
-    # - id: clang-tidy
-    # - id: oclint
-    # - id: uncrustify
-    # - id: cppcheck
-    #   args:
-    #     [
-    #       "--force",
-    #       "--language=c++",
-    #       "--std=c++17",
-    #       "--suppress=missingIncludeSystem",
-    #     ]
-    # - id: cpplint
-    #   args:
-    #     [
-    #       "--linelength=120",
-    #       "--filter=-legal/copyright,-readability/casting,-whitespace/braces,-readability/todo",
-    #     ]
-    # - id: include-what-you-use
-    #   args: ["--cxx17ns", "--update_comments"]
+            args: [-i]
+          # - id: clang-tidy
+          # - id: oclint
+          # - id: uncrustify
+          # - id: cppcheck
+          #   args: [--force, --language=c++, --std=c++20, --suppress=missingIncludeSystem]
+          # - id: cpplint
+          #   args: [--linelength=120, '--filter=-legal/copyright,-readability/casting,-whitespace/braces,-readability/todo']
+          # - id: include-what-you-use
+          #   args: [--cxx17ns, --update_comments]
 
     - repo: https://github.com/jumanjihouse/pre-commit-hook-yamlfmt
       rev: 0.2.2 # or other specific tag
