--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,12 +28,13 @@ repos:
       hooks:
           - id: clang-format
             args: [-i]
-          # - id: clang-tidy
-          #   args: [-extra-arg=-std=c++20]
+          #   - id: clang-tidy
+          #     args: [-extra-arg=-std=c++20]
           # - id: oclint
           # - id: uncrustify
-          # - id: cppcheck
-          #   args: [--force, --language=c++, --std=c++20, --suppress=missingIncludeSystem]
+          - id: cppcheck
+            args: [-q, --error-exitcode=1, --force, '--enable=performance,portability', --language=c++, --std=c++20, --suppress=unmatchedSuppression, --suppress=missingIncludeSystem,
+                --suppress=unusedFunction]
           # - id: cpplint
           #   args: [--linelength=120, '--filter=-legal/copyright,-readability/casting,-whitespace/braces,-readability/todo']
           # - id: include-what-you-use
